force-app/main/default/objects/Opportunity/fields/ACVSaas__c.field-meta.xml
<CustomField>
    <fullName>ACVSaas__c</fullName>
    <label>ACV SaaS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>