force-app/main/default/objects/Opportunity/fields/ACVServices__c.field-meta.xml
<CustomField>
    <fullName>ACVServices__c</fullName>
    <label>ACV Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>