force-app/main/default/objects/Opportunity/fields/AlignmentWithCloud__c.field-meta.xml
<CustomField>
    <fullName>AlignmentWithCloud__c</fullName>
    <label>Alignment with Cloud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>