force-app/main/default/objects/Opportunity/fields/AlignmentWithCloudComment__c.field-meta.xml
<CustomField>
    <fullName>AlignmentWithCloudComment__c</fullName>
    <label>Alignment with Cloud - comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>