force-app/main/default/objects/Opportunity/fields/AutoRenewNoticeDays__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewNoticeDays__c</fullName>
    <formula>ValidatedQuote__r.AutoRenewNoticeDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto renew notice (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>