force-app/main/default/objects/Opportunity/fields/AutoRenewTermMonths__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewTermMonths__c</fullName>
    <formula>ValidatedQuote__r.AutoRenewTermMonths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto renew term (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>