force-app/main/default/objects/Opportunity/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <formula>ValidatedQuote__r.BillingContact__c</formula>
    <label>Billing Contact</label>
    <type>Text</type>
</CustomField>