force-app/main/default/objects/Opportunity/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <formula>ValidatedQuote__r.BillingEmail__c</formula>
    <label>Billing Email</label>
    <type>Text</type>
</CustomField>