force-app/main/default/objects/Opportunity/fields/BillingconditionsforSaaS__c.field-meta.xml
<CustomField>
    <fullName>BillingconditionsforSaaS__c</fullName>
    <inlineHelpText>Standard term = Yearly upfront. Previously called &quot;SaaS Billing Conditions&quot;</inlineHelpText>
    <label>OLDTODELETEInvoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly upfront</fullName>
            </value>
            <value>
                <fullName>Quarterly upfront</fullName>
            </value>
            <value>
                <fullName>Twice yearly</fullName>
            </value>
            <value>
                <fullName>Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>