force-app/main/default/objects/Opportunity/fields/BillingContact__c.field-meta.xml
<CustomField>
    <fullName>BillingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OLDTODELETEBilling Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Billing Contact)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>