force-app/main/default/objects/Opportunity/fields/Billingemail__c.field-meta.xml
<CustomField>
    <fullName>Billingemail__c</fullName>
    <label>OLDTODELETEBilling email</label>
    <type>TextArea</type>
</CustomField>