force-app/main/default/objects/Opportunity/fields/BillingEntity__c.field-meta.xml
<CustomField>
    <fullName>BillingEntity__c</fullName>
    <label>Billing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillingEntity</valueSetName>
    </valueSet>
</CustomField>