force-app/main/default/objects/Opportunity/fields/BusinessNeeds__c.field-meta.xml
<CustomField>
    <fullName>BusinessNeeds__c</fullName>
    <description>Description of the business needs</description>
    <label>Business Needs</label>
    <type>TextArea</type>
</CustomField>