force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Champion is the person within your client’s organization that will sell on your behalf when you’re not there.
They will guide you through the decision making process, introduce you to key players and decision makers, and alert you</description>
    <inlineHelpText>A Champion is the person within your client’s organization that will sell on your behalf when you’re not there.
They will guide you through the decision making process, introduce you to key players and decision makers, and alert you</inlineHelpText>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Champion)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>