force-app/main/default/objects/Opportunity/fields/CloudAlliancesAWSSubStatus__c.field-meta.xml
<CustomField>
    <fullName>CloudAlliancesAWSSubStatus__c</fullName>
    <description>Completed manually by Partner team</description>
    <label>Cloud Alliances - AWS Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PartnerCloudAllianceSubStatus</valueSetName>
    </valueSet>
</CustomField>