force-app/main/default/objects/Opportunity/fields/CloudAlliancesMSFTSubStatus__c.field-meta.xml
<CustomField>
    <fullName>CloudAlliancesMSFTSubStatus__c</fullName>
    <description>Completed manually by Partner team</description>
    <label>Cloud Alliances - MSFT Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PartnerCloudAllianceSubStatus</valueSetName>
    </valueSet>
</CustomField>