force-app/main/default/objects/Opportunity/fields/CloudAlliancesSFDCSubStatus__c.field-meta.xml
<CustomField>
    <fullName>CloudAlliancesSFDCSubStatus__c</fullName>
    <description>Completed manually by Partner Team</description>
    <label>Cloud Alliances - SFDC Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PartnerCloudAllianceSubStatus</valueSetName>
    </valueSet>
</CustomField>