force-app/main/default/objects/Opportunity/fields/ContractDurationInMonths__c.field-meta.xml
<CustomField>
    <fullName>ContractDurationInMonths__c</fullName>
    <inlineHelpText>Please indicate the contract duration. It should be more then Zero.</inlineHelpText>
    <label>Contract Duration (in Months)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>