force-app/main/default/objects/Opportunity/fields/ContractProcess__c.field-meta.xml
<CustomField>
    <fullName>ContractProcess__c</fullName>
    <inlineHelpText>Out line detailed contract steps, including contract contact name.</inlineHelpText>
    <label>Contract process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>