force-app/main/default/objects/Opportunity/fields/ConvertedLeadId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted LeadId</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>