force-app/main/default/objects/Opportunity/fields/CustomerAvgBasket__c.field-meta.xml
<CustomField>
    <fullName>CustomerAvgBasket__c</fullName>
    <description>Average transaction value on customer website.</description>
    <inlineHelpText>Average Basket is the average transaction value on customer website.
If no info, you can explain other metrics option in the specific text field.</inlineHelpText>
    <label>Customer Avg Basket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>