force-app/main/default/objects/Opportunity/fields/CustomerConversionRate__c.field-meta.xml
<CustomField>
    <fullName>CustomerConversionRate__c</fullName>
    <description>Indicate customer conversion rate</description>
    <inlineHelpText>Indicate customer conversion rate</inlineHelpText>
    <label>Customer Conversion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>