force-app/main/default/objects/Opportunity/fields/DateOfFirstMeeting__c.field-meta.xml
<CustomField>
    <fullName>DateOfFirstMeeting__c</fullName>
    <description>Date of first meeting</description>
    <label>Date Of First Meeting</label>
    <type>Date</type>
</CustomField>