force-app/main/default/objects/Opportunity/fields/DecisionMaker__c.field-meta.xml
<CustomField>
    <fullName>DecisionMaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Decision Maker)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>