force-app/main/default/objects/Opportunity/fields/DecisionProcess__c.field-meta.xml
<CustomField>
    <fullName>DecisionProcess__c</fullName>
    <inlineHelpText>The process used to select, &amp; purchase CS&apos; offering. The events and timeline - validation and approval</inlineHelpText>
    <label>Decision process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>