force-app/main/default/objects/Opportunity/fields/DisqualifiedReason__c.field-meta.xml
<CustomField>
    <fullName>DisqualifiedReason__c</fullName>
    <description>field linked to the Loss reason Disqualified</description>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authority</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Wanted a Free Basic Plan</fullName>
            </value>
            <value>
                <fullName>Company too small</fullName>
            </value>
            <value>
                <fullName>Merging with existing opportunity</fullName>
            </value>
            <value>
                <fullName>Need (not interested)</fullName>
            </value>
            <value>
                <fullName>Not ready to purchase this year</fullName>
            </value>
            <value>
                <fullName>Unable to reach</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
            <value>
                <fullName>Support Training Call</fullName>
            </value>
            <value>
                <fullName>Self Serve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>