force-app/main/default/objects/Opportunity/fields/Domains__c.field-meta.xml
<CustomField>
    <fullName>Domains__c</fullName>
    <inlineHelpText>Indicate here the domains covered by this opp: taxonomy [COMPANY].[EXTENSION]
Eg: microsoft.com (no www, https)

&gt; For app, indicate Bundle ID + Country</inlineHelpText>
    <label>Domains</label>
    <type>TextArea</type>
</CustomField>