force-app/main/default/objects/Opportunity/fields/EconomicBuyer__c.field-meta.xml
<CustomField>
    <fullName>EconomicBuyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is paying for Contentsquare? An economic buyer, the individual in charge of the purse strings or budget for a purchase</description>
    <inlineHelpText>Who is paying for Contentsquare? An economic buyer, the individual in charge of the purse strings or budget for a purchase</inlineHelpText>
    <label>Economic Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Economic Buyer)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>