force-app/main/default/objects/Opportunity/fields/ExistingTechStack__c.field-meta.xml
<CustomField>
    <fullName>ExistingTechStack__c</fullName>
    <label>Existing Tech Stack</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB Tasty</fullName>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Adobe Analytics /Omniture / SiteCatalyst</fullName>
            </value>
            <value>
                <fullName>Adobe Target</fullName>
            </value>
            <value>
                <fullName>Content Square</fullName>
            </value>
            <value>
                <fullName>CQuotient</fullName>
            </value>
            <value>
                <fullName>Dynamic Yield</fullName>
            </value>
            <value>
                <fullName>Econda</fullName>
            </value>
            <value>
                <fullName>Google Analytics</fullName>
            </value>
            <value>
                <fullName>Google Optimize</fullName>
            </value>
            <value>
                <fullName>Hiconversion</fullName>
            </value>
            <value>
                <fullName>HP Autonomy</fullName>
            </value>
            <value>
                <fullName>Kameleon</fullName>
            </value>
            <value>
                <fullName>Maxymiser</fullName>
            </value>
            <value>
                <fullName>Monetate</fullName>
            </value>
            <value>
                <fullName>Optimizely</fullName>
            </value>
            <value>
                <fullName>Oracle Maxymizer</fullName>
            </value>
            <value>
                <fullName>Peerius</fullName>
            </value>
            <value>
                <fullName>Qubit</fullName>
            </value>
            <value>
                <fullName>Rich Relevance</fullName>
            </value>
            <value>
                <fullName>Sitespect</fullName>
            </value>
            <value>
                <fullName>VWO</fullName>
            </value>
            <value>
                <fullName>Web Trends</fullName>
            </value>
            <value>
                <fullName>Yieldify</fullName>
            </value>
            <value>
                <fullName>z_Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>