force-app/main/default/objects/Opportunity/fields/FinanceQuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>FinanceQuoteNumber__c</fullName>
    <description>This field equals to formula field &quot;Validate quote number&quot; to give the Finance and SalesOps team the possibility to edit quote number if necessary.</description>
    <inlineHelpText>This field is auto-populated from validated SF quote number. Can be changed by Finance, if needed to be coherent with PO number of the signed version.</inlineHelpText>
    <label>Finance quote number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>