force-app/main/default/objects/Opportunity/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <formula>TEXT(Account.Geography__c )</formula>
    <label>Geography</label>
    <type>Text</type>
</CustomField>