force-app/main/default/objects/Opportunity/fields/IncludedAppsSessionsPerYearMil__c.field-meta.xml
<CustomField>
    <fullName>IncludedAppsSessionsPerYearMil__c</fullName>
    <formula>ValidatedQuote__r.IncludedAppsSessionsPerYearMil__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Included Apps sessions per year (mil)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>