force-app/main/default/objects/Opportunity/fields/InsideSalesQualification__c.field-meta.xml
<CustomField>
    <fullName>InsideSalesQualification__c</fullName>
    <description>Inside sales qualification</description>
    <label>Meeting Qualification comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>