force-app/main/default/objects/Opportunity/fields/Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Invoicing__c</fullName>
    <inlineHelpText>Standard term = Yearly upfront. Previously called &quot;SaaS Billing Conditions&quot;</inlineHelpText>
    <label>Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing</valueSetName>
    </valueSet>
</CustomField>