force-app/main/default/objects/Opportunity/fields/IsAutoRenewInEffect__c.field-meta.xml
<CustomField>
    <fullName>IsAutoRenewInEffect__c</fullName>
    <formula>TEXT(ValidatedQuote__r.IsAutoRenewInEffect__c)</formula>
    <label>Is auto-renew in effect ?</label>
    <type>Text</type>
</CustomField>