force-app/main/default/objects/Opportunity/fields/LegalContactEmail__c.field-meta.xml
<CustomField>
    <fullName>LegalContactEmail__c</fullName>
    <formula>ValidatedQuote__r.LegalContactEmail__c</formula>
    <label>Legal Contact Email</label>
    <type>Text</type>
</CustomField>