force-app/main/default/objects/Opportunity/fields/LessonsLearned__c.field-meta.xml
<CustomField>
    <fullName>LessonsLearned__c</fullName>
    <label>Lessons learned</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>