force-app/main/default/objects/Opportunity/fields/LossDetails__c.field-meta.xml
<CustomField>
    <fullName>LossDetails__c</fullName>
    <description>Field linked to the loss reason</description>
    <label>Loss Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>