force-app/main/default/objects/Opportunity/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <label>Loss reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project cancelled</fullName>
            </value>
            <value>
                <fullName>Unqualified / not in our target market</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Use case</fullName>
            </value>
            <value>
                <fullName>Not a good time / revisit later</fullName>
            </value>
            <value>
                <fullName>Lack of budget / revisit later</fullName>
            </value>
            <value>
                <fullName>Price vs. perceived value</fullName>
            </value>
            <value>
                <fullName>Financial reasons</fullName>
            </value>
            <value>
                <fullName>Security, Legal Compliance</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Product Fit</fullName>
            </value>
            <value>
                <fullName>Customer Org</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Intimacy</fullName>
            </value>
            <value>
                <fullName>Deal scoping</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>