force-app/main/default/objects/Opportunity/fields/MEDDICDealSheet__c.field-meta.xml
<CustomField>
    <fullName>MEDDICDealSheet__c</fullName>
    <description>MEDDIC Deal Sheet attribut</description>
    <label>MEDDIC Deal Sheet</label>
    <type>Url</type>
</CustomField>