force-app/main/default/objects/Opportunity/fields/MetricsOther__c.field-meta.xml
<CustomField>
    <fullName>MetricsOther__c</fullName>
    <description>Describe Client online KPIs If Metrics does not fall in the 3 identified metrics (online revenue, average basket, conversion rate)</description>
    <inlineHelpText>Describe Client online KPIs If Metrics does not fall in the 3 identified metrics (online revenue, average basket, conversion rate)</inlineHelpText>
    <label>Metrics other</label>
    <type>TextArea</type>
</CustomField>