force-app/main/default/objects/Opportunity/fields/MonthlyPageViewsMil__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPageViewsMil__c</fullName>
    <description>Calculated automatically from Total PVPY up to (mil) field</description>
    <formula>TotalPVPYUpToMil__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated automatically from Total PVPY up to (mil) field</inlineHelpText>
    <label>Monthly Page Views (mil)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>