force-app/main/default/objects/Opportunity/fields/NextStepsEntryDate__c.field-meta.xml
<CustomField>
    <fullName>NextStepsEntryDate__c</fullName>
    <label>Next Steps - Entry Date</label>
    <type>Date</type>
</CustomField>