force-app/main/default/objects/Opportunity/fields/NumberFreeMonths__c.field-meta.xml
<CustomField>
    <fullName>NumberFreeMonths__c</fullName>
    <formula>ValidatedQuote__r.NumberFreeMonths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of free months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>