force-app/main/default/objects/Opportunity/fields/NumberOfProducts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfProducts__c</fullName>
    <description>Count number of opportunity products</description>
    <label>Number of products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>