force-app/main/default/objects/Opportunity/fields/OnlineRevenue__c.field-meta.xml
<CustomField>
    <fullName>OnlineRevenue__c</fullName>
    <description>Customer online revenue</description>
    <label>Online Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>