force-app/main/default/objects/Opportunity/fields/OppPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>OppPrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity main contact</description>
    <inlineHelpText>Indicate primary contact when opp is created.</inlineHelpText>
    <label>Opp primary contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>