force-app/main/default/objects/Opportunity/fields/OptOutGranted__c.field-meta.xml
<CustomField>
    <fullName>OptOutGranted__c</fullName>
    <formula>TEXT(ValidatedQuote__r.OptOutGranted__c)</formula>
    <label>Opt-out granted?</label>
    <type>Text</type>
</CustomField>