force-app/main/default/objects/Opportunity/fields/OptOutNeedNoticeBefore__c.field-meta.xml
<CustomField>
    <fullName>OptOutNeedNoticeBefore__c</fullName>
    <formula>ValidatedQuote__r.OptOutNeedNoticeBefore__c</formula>
    <inlineHelpText>Maximum date when the opt-out notice has to be sent by the customer. Otherwise, it&apos;s considered as opted-in</inlineHelpText>
    <label>Opt-out need notice before</label>
    <type>Date</type>
</CustomField>