force-app/main/default/objects/Opportunity/fields/OptOutPriorNoticeDays__c.field-meta.xml
<CustomField>
    <fullName>OptOutPriorNoticeDays__c</fullName>
    <formula>ValidatedQuote__r.OptOutPriorNoticeDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many days before the opt-out end-date must the customer notify CS</inlineHelpText>
    <label>Opt-out prior notice (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>