force-app/main/default/objects/Opportunity/fields/Painpoints__c.field-meta.xml
<CustomField>
    <fullName>Painpoints__c</fullName>
    <label>Pain points</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Satisfaction, Retention, or Loyalty</fullName>
            </value>
            <value>
                <fullName>Digital transformation</fullName>
            </value>
            <value>
                <fullName>Marketing and Acquisition</fullName>
            </value>
            <value>
                <fullName>Merchandising &amp; pricing strategy</fullName>
            </value>
            <value>
                <fullName>Mobile App CX</fullName>
            </value>
            <value>
                <fullName>Operational efficiency</fullName>
            </value>
            <value>
                <fullName>Speed &amp; performance</fullName>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
            </value>
            <value>
                <fullName>UX &amp; Digital products</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>