force-app/main/default/objects/Opportunity/fields/PainPointsDetails__c.field-meta.xml
<CustomField>
    <fullName>PainPointsDetails__c</fullName>
    <description>Details about pain points addressed by CS</description>
    <inlineHelpText>Add more details about pain points addressed by CS</inlineHelpText>
    <label>Painpoints details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>