force-app/main/default/objects/Opportunity/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <inlineHelpText>Standard terms = Net 30 days</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Paymentterms</valueSetName>
    </valueSet>
</CustomField>