force-app/main/default/objects/Opportunity/fields/Paymentterms__c.field-meta.xml
<CustomField>
    <fullName>Paymentterms__c</fullName>
    <inlineHelpText>Standard terms = Net 30 days</inlineHelpText>
    <label>OLDTODELETEPayment terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30 days</fullName>
            </value>
            <value>
                <fullName>Net 45 days</fullName>
            </value>
            <value>
                <fullName>Net 60 days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>