force-app/main/default/objects/Opportunity/fields/PreviousContracts__c.field-meta.xml
<CustomField>
    <fullName>PreviousContracts__c</fullName>
    <label>Previous Contracts</label>
    <summaryForeignKey>PreviousContract__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>