force-app/main/default/objects/Opportunity/fields/PrimaryCompetitorDefined__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCompetitorDefined__c</fullName>
    <description>Count number of Primary competitor</description>
    <label>Primary Competitor Defined</label>
    <summaryFilterItems>
        <field>OpportunityCompetitor__c.PrimaryCompetitor__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityCompetitor__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>