force-app/main/default/objects/Opportunity/fields/ProcurementSummary_c__c.field-meta.xml
<CustomField>
    <fullName>ProcurementSummary_c__c</fullName>
    <inlineHelpText>Summarize all steps to procurement, including vendor management, legal and security</inlineHelpText>
    <label>Procurement Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>