force-app/main/default/objects/Opportunity/fields/ProductInterests__c.field-meta.xml
<CustomField>
    <fullName>ProductInterests__c</fullName>
    <label>Product interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aaaaaa</fullName>
            </value>
            <value>
                <fullName>bbbbbb</fullName>
            </value>
            <value>
                <fullName>ccccccc</fullName>
            </value>
            <value>
                <fullName>aaa</fullName>
                <isActive>false</isActive>
                <label>aaa</label>
            </value>
            <value>
                <fullName>bbb</fullName>
                <isActive>false</isActive>
                <label>bbb</label>
            </value>
            <value>
                <fullName>ccc</fullName>
                <isActive>false</isActive>
                <label>ccc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>