force-app/main/default/objects/Opportunity/fields/ProofOfValue__c.field-meta.xml
<CustomField>
    <fullName>ProofOfValue__c</fullName>
    <description>Mandatory if ROI case is &quot;NO&quot; to move to next stage (#5- Preferred Vendor)</description>
    <inlineHelpText>Describe in few words. Mandatory if ROI case is &quot;N&quot; to move to next stage (#5- Preferred Vendor)</inlineHelpText>
    <label>Proof of value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>